@@ -96,6 +96,10 @@ $(BUILD_DIR)/%.o: %.c
 $(BUILD_DIR)/%.o: %.cpp
 	$(COMPILE.cpp) $< $(OUTPUT_OPTION)
 
+$(BUILD_DIR)/%.o: %.cc
+	$(COMPILE.cpp) $< $(OUTPUT_OPTION)
+
+
 # --- static library ----------------------------------------------------------
 
 LIBTOOL_STATIC ?= $(RM) $@ ; $(AR) -cr $@ $^
