@@ -176,7 +176,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\..\test\plain\test_main.cpp"
+				RelativePath="..\..\..\test\plain\test_main.cc"
 				>
 			</File>
 		</Filter>
