@@ -1,3 +1,3 @@
-add_executable(ellipsis main.cpp ellipsis.cpp)
+add_executable(ellipsis main.cc ellipsis.cc)
 target_link_libraries(ellipsis dyncall_s)
 
