@@ -1,3 +1,3 @@
-add_executable(suite2_x86win32std case.cpp main.cpp)
+add_executable(suite2_x86win32std case.cc main.cc)
 target_link_libraries(suite2_x86win32std dyncall_s)
 
