@@ -1,3 +1,3 @@
-add_executable(suite3 case.cpp main.cpp)
+add_executable(suite3 case.cc main.cc)
 target_link_libraries(suite3 dyncall_s)
 
